--- a/MediFlow.API/MediFlow.API.csproj
+++ b/MediFlow.API/MediFlow.API.csproj
@@ -22,4 +22,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Modules\Journal\Domain\Value\" />
+    <Folder Include="Modules\Journal\UseCases\EditNote\" />
+    <Folder Include="Modules\Journal\UseCases\DeleteNote\" />
+  </ItemGroup>
+
 </Project>
