--- a/Journal/Journal.csproj
+++ b/Journal/Journal.csproj
@@ -6,6 +6,27 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Features\Note\**" />
+    <Compile Remove="Features\Ordinatory\AddActual\**" />
+    <Compile Remove="Features\Ordinatory\Deprecate\**" />
+    <Compile Remove="Features\Ordinatory\GetActual\**" />
+    <Compile Remove="Features\Ordinatory\GetHistory\**" />
+    <Compile Remove="Features\Person\**" />
+    <EmbeddedResource Remove="Features\Note\**" />
+    <EmbeddedResource Remove="Features\Ordinatory\AddActual\**" />
+    <EmbeddedResource Remove="Features\Ordinatory\Deprecate\**" />
+    <EmbeddedResource Remove="Features\Ordinatory\GetActual\**" />
+    <EmbeddedResource Remove="Features\Ordinatory\GetHistory\**" />
+    <EmbeddedResource Remove="Features\Person\**" />
+    <None Remove="Features\Note\**" />
+    <None Remove="Features\Ordinatory\AddActual\**" />
+    <None Remove="Features\Ordinatory\Deprecate\**" />
+    <None Remove="Features\Ordinatory\GetActual\**" />
+    <None Remove="Features\Ordinatory\GetHistory\**" />
+    <None Remove="Features\Person\**" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
@@ -18,18 +39,8 @@
 
 	<ItemGroup>
 	  <Folder Include="Data\Database\" />
-	  <Folder Include="Features\Note\Edit\" />
-	  <Folder Include="Features\Note\Delete\" />
-	  <Folder Include="Features\Note\GetOne\" />
-	  <Folder Include="Features\Note\GetMultiple\" />
-	  <Folder Include="Features\Ordinatory\GetHistory\" />
-	  <Folder Include="Features\Ordinatory\AddActual\" />
-	  <Folder Include="Features\Ordinatory\GetActual\" />
-	  <Folder Include="Features\Ordinatory\Deprecate\" />
-	  <Folder Include="Features\Person\Delete\" />
-	  <Folder Include="Features\Person\Edit\" />
-	  <Folder Include="Features\Person\InspectOne\" />
-	  <Folder Include="Features\Person\ViewMultiple\" />
+	  <Folder Include="Features\Ordinatory\Services\" />
+	  <Folder Include="Features\Persons\Services\" />
 	</ItemGroup>
 
 </Project>
