--- a/MediFlow.API/appsettings.json
+++ b/MediFlow.API/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtOptions": {
+    "SecretKey": "secretkeysecretkeysecretkeysecretkeysecretkeysecretkey",
+    "Audience": "audience",
+    "Issuer": "issuer",
+    "ExpiresMinutes": "60"
+  },
+  "ConnectionStrings": {
+    "AccountDb": "Host=localhost; Database=Accounts; Username=postgres; Password=P@55w0rd"
+  }
 }
