--- a/MediFlow.API/appsettings.json
+++ b/MediFlow.API/appsettings.json
@@ -10,7 +10,8 @@
     "SecretKey": "secretkeysecretkeysecretkeysecretkeysecretkeysecretkey",
     "Audience": "audience",
     "Issuer": "issuer",
-    "ExpiresMinutes": "60"
+    "ExpiresMinutes": "5",
+    "RefreshExpiresMinutes":  "15"
   },
   "ConnectionStrings": {
     "AccountDb": "Host=localhost; Database=Accounts; Username=postgres; Password=P@55w0rd"
